k8s-setup/ingress/host-based/reatjs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactjs-deployment
spec:
  selector:
    matchLabels:
      app: reactjs-deployment
  template:
    metadata:
      labels:
        app: reactjs-deployment
    spec:
      containers:
      - name: reactjs-deployment
        image: 69966/earthdx:78
        ports:
        - containerPort: 80
