k8s-setup/ingress/host-based/reactjs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reactjs-service
spec:
  selector:
    app: reactjs-deployment
  ports:
  - port: 80
    targetPort: 80
